# OhTe

./: README.md
dokumentaatio/: tyoaika.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
projekti/: .coverage  .coveragerc  collatz.py  pyproject.toml  tasks.py
projekti/dokumentaatio/: Vaatimusmaarittely.md  arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaika.md
projekti/src/: collatz.py  gui.py  main.py  visualisazion.py
projekti/src/UI/: gui.py
projekti/src/logic/: collatz.py
projekti/src/tests/: .coverage  Collatz_test.py  Visualisazion_test.py
projekti/src/visualisazion/: visualisazion.py
