[tool.poetry]
name = "projekti"
version = "0.1.0"
description = ""
authors = ["Vilja Väisänen <vilja.vaisanen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
